2007-10-28  Moritz  <moritz@g10code.com>

	* configure.ac: Integrated KSBA support; call AM_PATH_KSBA.  Use
	POLDI_ENABLE_FEATURE macro for --enable-x509-auth and
	--enable-simpledb-auth arguments.  AC_DEFINE_UNQUOTED the symbols
	NEED_LIBGCRYPT_VERSION and NEED_KSBA_VERSION.  Define
	AM_CONDITIONAL for symbols AUTH_METHOD_X509 and
	AUTH_METHOD_SIMPLEDB.  Print final status message.

	* acinclude.m4: Added quoting; removed gpg-error and libgcrypt
	related macros; new macro: POLDI_ENABLE_FEATURE.

2007-10-27  Moritz  <moritz@g10code.com>

	* configure.ac (AC_CONFIG_FILES): Removed reference to
	scd-support.

2007-08-17  Moritz Schulte  <moritz@g10code.com>

	* configure.ac (AC_CHECK_FUNCS): Added nanosleep.

2007-06-30  Moritz Schulte  <moritz@g10code.com>

	* configure.ac (AC_CONFIG_FILES): Added am/Makefile.
	* autogen,sh: New file.
	* Makefile.am (SUBDIRS): Added "am".
	* am: New directory.

2007-06-29  Moritz  <moritz@g10code.com>

	* BUGS: New file.
	* NEWS: Updated.

	* m4: New directory.
	* m4/libassuan.m4: New file.
	* configure.ac: Require libassuan.
	(AH_BOTTOM): Cleared, define GNUPG_DEFAULT_SCD.
	Use AM_PROG_CC_C_O.
	(AC_CONFIG_FILES): Added: m4/Makefile, src/scd-support/Makefile,
	src/scd/Makefile; removed: src/libscd/Makefile.

2007-03-03  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Integrate assuan; it's a new dependency from now
	on.

2005-12-12  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Bumped version number up to 0.4-cvs.

2005-12-11  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Now: bumped version number up to 0.3.

2005-12-10  Moritz Schulte  <moritz@g10code.com>

	* NEWS: Updated.

2005-12-03  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Undo last version number bumb; Poldi is not at
	v0.3 yet.

2005-10-29  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Bumped version number up to 0.3.
	* NEWS: Updated.

2005-10-22  Moritz Schulte  <moritz@g10code.com>

	* NEWS: Updated.
